try fix the waves

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
         </div>
     </section>
 
+    <section class="section__waves">
+        <input type="range" min="7" id="step" style="display: none;">
+    </section>
+
       
 
       <!-- Import the GSAP Platform -->
