--- a/index.html
+++ b/index.html
@@ -44,10 +44,6 @@
         </div>
     </section>
 
-    <section class="section__waves">
-        <input type="range" min="7" id="step" style="display: none;">
-    </section>
-
       
 
       <!-- Import the GSAP Platform -->
@@ -56,5 +52,8 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
+
+      <!-- Import Script for WAVES -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
 </body>
 </html>
