--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
+    <script src="assets/js/waves.js" defer></script>
     <script src="assets/js/script.js" defer></script>
 </head>
 <body>
@@ -13,12 +14,9 @@
     
 
     <!-- Start of Header -->
-    <header class="header__container">
-            <video autoplay muted loop class="video-background-header">
-                <source src="assets/video/background-video.mp4" type="video/mp4">
-            </video>
+    <!-- <header class="header__container">
             <h2 class="header__video__titel"> <span class="header">Kevin </span><span class="header"> Spring</span></h2>
-    </header>
+    </header> -->
     <!-- End of Header -->
 
     <section class="section__links" id="stage">
@@ -30,18 +28,20 @@
     </section>
 
     <section class="section">
-        <div class="wrap">
-            <div class="text">Hello</div>
-            <div class="text">Hello</div>
-            <div class="text">Hello</div>
-            <div class="text">Hello</div>
-            <div class="text">Hello</div>
-            <div class="text">Hello</div>
-            <div class="text">Hello</div>
-            <div class="text">Hello</div>
-            <div class="text">Hello</div>
-            <div class="text">Hello</div>
-        </div>
+
+        <h2 class="header__video__titel"> <span class="header">Kevin </span><span class="header"> Spring</span></h2>
+        <!-- <div class="wrap">
+            <div class="text">Kevin Spring</div>
+            <div class="text">Kevin Spring</div>
+            <div class="text">Kevin Spring</div>
+            <div class="text">Kevin Spring</div>
+            <div class="text">Kevin Spring</div>
+            <div class="text">Kevin Spring</div>
+            <div class="text">Kevin Spring</div>
+            <div class="text">Kevin Spring</div>
+            <div class="text">Kevin Spring</div>
+            <div class="text">Kevin Spring</div>
+        </div> -->
     </section>
 
       
