--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
     </section>
 
     <section class="section">
-
         <h2 class="header__video__titel"> <span class="header">Kevin </span><span class="header"> Spring</span></h2>
-        <!-- <div class="wrap">
+    </section>
+
+    <!-- 3D text animation -->
+    <!-- <div class="wrap">
             <div class="text">Kevin Spring</div>
             <div class="text">Kevin Spring</div>
             <div class="text">Kevin Spring</div>
@@ -42,8 +44,6 @@
             <div class="text">Kevin Spring</div>
             <div class="text">Kevin Spring</div>
         </div> -->
-    </section>
-
       
 
       <!-- Import the GSAP Platform -->
