fix animation on socials

--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@500;700&display=swap" rel="stylesheet">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+        integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <!-- Gulp stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <!-- Waves animation -->
     <script src="assets/js/waves.js" defer></script>
+    <!-- Script for GSAP-effects -->
     <script src="assets/js/script.js" defer></script>
 </head>
 <body>
@@ -21,15 +28,15 @@
 
     <section class="section__links" id="stage">
         <div class="section__links__item-wrapper">
-            <h3 class="section__links-item"> <a href="#" class="effect-box">CV</a> </h3>
-            <h3 class="section__links-item"> <a href="#" class="effect-box">Projects</a> </h3>
-            <h3 class="section__links-item"> <a href="#" class="effect-box">About</a> </h3>
+            <h3 class="section__links-item"> <a href="#" class="effect-box">kevin spring</a> </h3>
+            <h3 class="section__links-item"> <a href="#" class="effect-box">projects</a> </h3>
+            <h3 class="section__links-item"> <a href="#" class="effect-box">cv</a> </h3>
         </div>
     </section>
 
-    <section class="section">
+    <!-- <section class="section">
         <h2 class="header__video__titel"> <span class="header">Kevin </span><span class="header"> Spring</span></h2>
-    </section>
+    </section> -->
 
     <!-- 3D text animation -->
     <!-- <div class="wrap">
@@ -45,6 +52,11 @@
             <div class="text">Kevin Spring</div>
         </div> -->
       
+        <div class="socials">
+            <a href="https://www.linkedin.com/in/kevin-spring/" class="social-link"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/Kevin-Spring" class="social-link"><i class="fab fa-github"></i></a>
+            <a href="https://www.instagram.com/kevininthespring/" class="social-link"><i class="fab fa-instagram"></i></a>
+        </div>
 
       <!-- Import the GSAP Platform -->
       <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
