fix project page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <section class="section__links" id="stage">
         <div class="section__links__item-wrapper">
-            <h3 class="section__links-item"> <a href="#" class="effect-box">kevin spring</a> </h3>
+            <h3 class="section__links-item"> <a href="#" class="effect-box">spring!</a> </h3>
             <h3 class="section__links-item"> <a href="#" class="effect-box">projects</a> </h3>
             <h3 class="section__links-item"> <a href="#" class="effect-box">cv</a> </h3>
         </div>
