added contact-but doesn't work

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- Gulp stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- Waves animation -->
+    <!-- Copyright (c) 2020 by Louis Hoebregts (https://codepen.io/Mamboleoo/pen/xxbwqmz) -->
     <script src="assets/js/waves.js" defer></script>
     <!-- Script for GSAP-effects -->
     <script src="assets/js/script.js" defer></script>
@@ -28,9 +29,10 @@
 
     <section class="section__links" id="stage">
         <div class="section__links__item-wrapper">
-            <h3 class="section__links-item"> <a href="#" class="effect-box">spring!</a> </h3>
-            <h3 class="section__links-item"> <a href="#" class="effect-box">projects</a> </h3>
+            <h3 class="section__links-item"> <a href="#" class="effect-box">About</a> </h3>
+            <h3 class="section__links-item"> <a href="contact.html" class="effect-box">Contact</a> </h3>
             <h3 class="section__links-item"> <a href="#" class="effect-box">cv</a> </h3>
+            
         </div>
     </section>
 
