--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
         </div> -->
       
         <div class="socials">
-            <a href="https://www.linkedin.com/in/kevin-spring/" class="social-link"><i class="fab fa-linkedin"></i></a>
-            <a href="https://github.com/Kevin-Spring" class="social-link"><i class="fab fa-github"></i></a>
-            <a href="https://www.instagram.com/kevininthespring/" class="social-link"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/kevin-spring/" class="social-link section__links-item"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/Kevin-Spring" class="social-link section__links-item"><i class="fab fa-github"></i></a>
+            <a href="https://www.instagram.com/kevininthespring/" class="social-link section__links-item"><i class="fab fa-instagram"></i></a>
         </div>
 
       <!-- Import the GSAP Platform -->
