--- a/contact.html
+++ b/contact.html
@@ -17,17 +17,14 @@
 </head>
 
 <body>
-
-    <div class="wrapper">
-
-    <section class="section__links" id="stage">
-        <div class="section__links__item-wrapper">
-            <h3 class="section__links-item"> <a href="index.html" class="home-btn"><i class="fas fa-igloo"></i></a></h3>
-            <h3 class="section__links-item"> <a href="#" class="effect-box">About</a> </h3>
-            <h3 class="section__links-item"> <a href="contact.html" class="effect-box">Contact</a> </h3>
-            <h3 class="section__links-item"> <a href="#" class="effect-box">cv</a> </h3>
-        </div>
-    </section>
+        <header class="navbar__links" id="stage">
+            <div class="navbar__links__item-wrapper">
+                <h3 class="navbar__links-item stagger-animation"> <a href="index.html" class="effect-box"><i class="fas fa-igloo"></i></a> </h3>
+                <h3 class="navbar__links-item stagger-animation"> <a href="about.html" class="effect-box">About</a> </h3>
+                <h3 class="navbar__links-item stagger-animation"> <a href="contact.html" class="effect-box">Contact</a> </h3>
+                <h3 class="navbar__links-item stagger-animation"> <a href="#" class="effect-box">cv</a> </h3>
+            </div>
+        </header>
 
     <section class="section__contact" id="contact">
 
@@ -55,7 +52,6 @@
             </div>
         </form>
     </section>
-</div>
 
     <!-- Import scripts for the blob -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/p5.min.js"></script>
