--- a/index.html
+++ b/index.html
@@ -27,37 +27,22 @@
     </header> -->
     <!-- End of Header -->
 
-    <section class="section__links" id="stage">
-        <div class="section__links__item-wrapper">
-            <h3 class="section__links-item"> <a href="#" class="effect-box">About</a> </h3>
-            <h3 class="section__links-item"> <a href="contact.html" class="effect-box">Contact</a> </h3>
-            <h3 class="section__links-item"> <a href="#" class="effect-box">cv</a> </h3>
-            
+    <header class="navbar__links" id="stage">
+        <div class="navbar__links__item-wrapper">
+            <h3 class="navbar__links-item stagger-animation"> <a href="#" class="effect-box">About</a> </h3>
+            <h3 class="navbar__links-item stagger-animation"> <a href="contact.html" class="effect-box">Contact</a> </h3>
+            <h3 class="navbar__links-item stagger-animation"> <a href="#" class="effect-box">cv</a> </h3>
         </div>
-    </section>
+    </header>
 
     <!-- <section class="section">
         <h2 class="header__video__titel"> <span class="header">Kevin </span><span class="header"> Spring</span></h2>
     </section> -->
-
-    <!-- 3D text animation -->
-    <!-- <div class="wrap">
-            <div class="text">Kevin Spring</div>
-            <div class="text">Kevin Spring</div>
-            <div class="text">Kevin Spring</div>
-            <div class="text">Kevin Spring</div>
-            <div class="text">Kevin Spring</div>
-            <div class="text">Kevin Spring</div>
-            <div class="text">Kevin Spring</div>
-            <div class="text">Kevin Spring</div>
-            <div class="text">Kevin Spring</div>
-            <div class="text">Kevin Spring</div>
-        </div> -->
       
         <div class="socials">
-            <a href="https://www.linkedin.com/in/kevin-spring/" class="social-link section__links-item"><i class="fab fa-linkedin"></i></a>
-            <a href="https://github.com/Kevin-Spring" class="social-link section__links-item"><i class="fab fa-github"></i></a>
-            <a href="https://www.instagram.com/kevininthespring/" class="social-link section__links-item"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/kevin-spring/" class="social-link stagger-animation"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/Kevin-Spring" class="social-link stagger-animation"><i class="fab fa-github"></i></a>
+            <a href="https://www.instagram.com/kevininthespring/" class="social-link stagger-animation"><i class="fab fa-instagram"></i></a>
         </div>
 
       <!-- Import the GSAP Platform -->
