fill about section with goodies

--- a/contact.html
+++ b/contact.html
@@ -19,10 +19,10 @@
 <body>
         <header class="navbar__links" id="stage">
             <div class="navbar__links__item-wrapper">
-                <h3 class="navbar__links-item stagger-animation"> <a href="index.html" class="effect-box"><i class="fas fa-igloo"></i></a> </h3>
+                <h3 class="navbar__links-item stagger-animation"> <a href="index.html" class="iglo"><i class="fas fa-igloo"></i></a> </h3>
                 <h3 class="navbar__links-item stagger-animation"> <a href="about.html" class="effect-box">About</a> </h3>
                 <h3 class="navbar__links-item stagger-animation"> <a href="contact.html" class="effect-box">Contact</a> </h3>
-                <h3 class="navbar__links-item stagger-animation"> <a href="#" class="effect-box">cv</a> </h3>
+                <h3 class="navbar__links-item stagger-animation"> <a href="cv.html" class="effect-box">cv</a> </h3>
             </div>
         </header>
 
