--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 
     <header class="navbar__links" id="stage">
         <div class="navbar__links__item-wrapper">
-            <h3 class="navbar__links-item stagger-animation"> <a href="#" class="effect-box">About</a> </h3>
+            <h3 class="navbar__links-item stagger-animation"> <a href="about.html" class="effect-box">About</a> </h3>
             <h3 class="navbar__links-item stagger-animation"> <a href="contact.html" class="effect-box">Contact</a> </h3>
-            <h3 class="navbar__links-item stagger-animation"> <a href="#" class="effect-box">cv</a> </h3>
+            <h3 class="navbar__links-item stagger-animation"> <a href="cv.html" class="effect-box">cv</a> </h3>
         </div>
     </header>
 
@@ -40,9 +40,9 @@
     </section> -->
       
         <div class="socials">
-            <a href="https://www.linkedin.com/in/kevin-spring/" class="social-link stagger-animation"><i class="fab fa-linkedin"></i></a>
-            <a href="https://github.com/Kevin-Spring" class="social-link stagger-animation"><i class="fab fa-github"></i></a>
-            <a href="https://www.instagram.com/kevininthespring/" class="social-link stagger-animation"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/kevin-spring/" target="_newblank" class="social-link stagger-animation"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/Kevin-Spring" target="_newblank" class="social-link stagger-animation"><i class="fab fa-github"></i></a>
+            <a href="https://www.instagram.com/kevininthespring/" target="_newblank" class="social-link stagger-animation"><i class="fab fa-instagram"></i></a>
         </div>
 
       <!-- Import the GSAP Platform -->
