--- a/about.html
+++ b/about.html
@@ -18,14 +18,14 @@
 
     <header class="navbar__links" id="stage">
         <div class="navbar__links__item-wrapper">
-            <h3 class="navbar__links-item stagger-animation"> <a href="index.html" class="effect-box"><i class="fas fa-igloo"></i></a> </h3>
+            <h3 class="navbar__links-item stagger-animation"> <a href="index.html" class="iglo"><i class="fas fa-igloo"></i></a> </h3>
             <h3 class="navbar__links-item stagger-animation"> <a href="about.html" class="effect-box">About</a> </h3>
             <h3 class="navbar__links-item stagger-animation"> <a href="contact.html" class="effect-box">Contact</a> </h3>
-            <h3 class="navbar__links-item stagger-animation"> <a href="#" class="effect-box">cv</a> </h3>
+            <h3 class="navbar__links-item stagger-animation"> <a href="cv.html" class="effect-box">cv</a> </h3>
         </div>
     </header>
 
-    <div class="wrapper">
+    <div class="about__wrapper">
 
      <!-- 3D text animation -->
      <header class="threeD">
@@ -44,18 +44,17 @@
     </header>
     <main class="main main-animation">
         <h1 class="main__header">ABOUT ME</h1>
-        <p class="main__content">A creative and passionate web development student with a backgorund in the music & media industry. A good cup of coffee is always appreciated!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque cumque tempore et nemo voluptatem pariatur quam eaque cum! Facere similique ex recusandae nostrum eveniet sequi ipsam temporibus, veniam quasi qui asperiores, autem debitis laboriosam incidunt. Distinctio repudiandae maxime at ea obcaecati laborum veniam numquam, nobis nisi quibusdam hic possimus aut?</p>
+        <p class="main__content">A creative and passionate web development student with a backgorund in the music & media industry. A good cup of coffee is always appreciated! Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque cumque tempore et nemo voluptatem pariatur quam eaque cum! Facere similique ex recusandae nostrum eveniet sequi ipsam temporibus, veniam quasi qui asperiores, autem debitis laboriosam incidunt. Distinctio repudiandae maxime at ea obcaecati laborum veniam numquam, nobis nisi quibusdam hic possimus aut?</p>
         <h2>Projects:</h2>
-        <div>MASSA BALLA WEBBSIDOR SOM JAG GJORT WOOWOW</div>
+        <div> <a href="https://kevin-spring.github.io/Crooked_Trees/" target="_newblank">Crooked Trees</a></div>
         <h2>Music:</h2>
-        <div><iframe src="https://open.spotify.com/embed/track/2ICYTIxcI1HCx1iFnTrqxM" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe><iframe src="https://open.spotify.com/embed/track/62WhbIKZDBSxqDBBcGFWqy" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></div>
+        <div><iframe src="https://open.spotify.com/embed/track/2ICYTIxcI1HCx1iFnTrqxM" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media" class="spotify"></iframe><iframe src="https://open.spotify.com/embed/track/62WhbIKZDBSxqDBBcGFWqy" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media" class="spotify"></iframe></div>
     </main>
 
     <div class="about__socials">
-        <a href="https://www.linkedin.com/in/kevin-spring/" class="about__social-link"><i class="fab fa-linkedin"></i></a>
-        <a href="https://github.com/Kevin-Spring" class="about__social-link"><i class="fab fa-github"></i></a>
-        <a href="https://www.instagram.com/kevininthespring/" class="about__social-link"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/kevin-spring/" target="_newblank" class="about__social-link"><i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/Kevin-Spring" target="_newblank" class="about__social-link"><i class="fab fa-github"></i></a>
+        <a href="https://www.instagram.com/kevininthespring/" target="_newblank" class="about__social-link"><i class="fab fa-instagram"></i></a>
     </div>
 
     <!-- <div class=""><i class="far fa-hand-spock hand"></i></div> -->
