--- a/about.html
+++ b/about.html
@@ -30,16 +30,16 @@
      <!-- 3D text animation -->
      <header class="threeD">
         <div class="wrap">
-            <div class="text">O __ O</div>
-            <div class="text">O __ O</div>
-            <div class="text">O __ O</div>
-            <div class="text">O __ O</div>
-            <div class="text">O __ O</div>
-            <div class="text">O __ O</div>
-            <div class="text">O __ O</div>
-            <div class="text">O __ O</div>
-            <div class="text">O __ O</div>
-            <div class="text">O __ O</div>
+            <div class="text">ʕ0ᴥ0ʔ</div>
+            <div class="text">ʕ0ᴥ0ʔ</div>
+            <div class="text">ʕ0ᴥ0ʔ</div>
+            <div class="text">ʕ0ᴥ0ʔ</div>
+            <div class="text">ʕ0ᴥ0ʔ</div>
+            <div class="text">ʕ0ᴥ0ʔ</div>
+            <div class="text">ʕ0ᴥ0ʔ</div>
+            <div class="text">ʕ0ᴥ0ʔ</div>
+            <div class="text">ʕ0ᴥ0ʔ</div>
+            <div class="text">ʕ0ᴥ0ʔ</div>
         </div>
     </header>
 
