fix about content

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header> -->
     <!-- End of Header -->
 
-    <header class="navbar__links" id="stage">
+    <header class="navbar__links">
         <div class="navbar__links__item-wrapper">
             <h3 class="navbar__links-item stagger-animation"> <a href="about.html" class="effect-box">About</a> </h3>
             <h3 class="navbar__links-item stagger-animation"> <a href="contact.html" class="effect-box">Contact</a> </h3>
