--- a/about.html
+++ b/about.html
@@ -44,21 +44,36 @@
     </header>
 
     <main class="main main-animation">
-        <h1 class="main__header">ABOUT ME</h1>
+        <h1 class="main__header" id="stage">ABOUT ME</h1>
         <p class="main__content">A creative and passionate web development student with a backgorund in the music & media industry. A good cup of coffee is always appreciated! Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque cumque tempore et nemo voluptatem pariatur quam eaque cum! Facere similique ex recusandae nostrum eveniet sequi ipsam temporibus, veniam quasi qui asperiores, autem debitis laboriosam incidunt. Distinctio repudiandae maxime at ea obcaecati laborum veniam numquam, nobis nisi quibusdam hic possimus aut?</p>
-        <h2>Projects:</h2>
-        <div> <a href="https://kevin-spring.github.io/Crooked_Trees/" target="_newblank">Crooked Trees</a></div>
-        <h2>Music:</h2>
-        <div><iframe src="https://open.spotify.com/embed/track/2ICYTIxcI1HCx1iFnTrqxM" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media" class="spotify"></iframe><iframe src="https://open.spotify.com/embed/track/62WhbIKZDBSxqDBBcGFWqy" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media" class="spotify"></iframe></div>
+        <h2 class="main__underheader">Projects:</h2>
+        <div class="main__projects-container">
+            <div class="main__projects-item-1"> <a class="main__projects-item-img" href="https://kevin-spring.github.io/Crooked_Trees/" target="_newblank">Crooked Trees</a></div>
+            <div class="main__projects-item-2"> <a class="main__projects-item-img" href="https://kevin-spring.github.io/Crooked_Trees/" target="_newblank">Leopard</a></div>
+            <div class="main__projects-item-3"> <a class="main__projects-item-img" href="https://kevin-spring.github.io/Crooked_Trees/" target="_newblank">Calculator</a></div>
+        </div>
+        <h2 class="main__underheader-music">Music:</h2>
+        <div class="main__spotify-container">
+            <iframe src="https://open.spotify.com/embed/track/2ICYTIxcI1HCx1iFnTrqxM" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media" class="spotify"></iframe>
+            <iframe src="https://open.spotify.com/embed/track/62WhbIKZDBSxqDBBcGFWqy" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media" class="spotify"></iframe>
+            <iframe src="https://open.spotify.com/embed/track/72CTSMA60kJFv20SoHHq6Q" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media" class="spotify"></iframe>
+        </div>
+        <div class="about__socials">
+            <a href="https://www.linkedin.com/in/kevin-spring/" target="_newblank" class="about__social-link"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/Kevin-Spring" target="_newblank" class="about__social-link"><i class="fab fa-github"></i></a>
+            <a href="https://www.instagram.com/kevininthespring/" target="_newblank" class="about__social-link"><i class="fab fa-instagram"></i></a>
+        </div>
     </main>
 
-    <div class="about__socials">
-        <a href="https://www.linkedin.com/in/kevin-spring/" target="_newblank" class="about__social-link"><i class="fab fa-linkedin"></i></a>
-        <a href="https://github.com/Kevin-Spring" target="_newblank" class="about__social-link"><i class="fab fa-github"></i></a>
-        <a href="https://www.instagram.com/kevininthespring/" target="_newblank" class="about__social-link"><i class="fab fa-instagram"></i></a>
-    </div>
+    
 
     <!-- <div class=""><i class="far fa-hand-spock hand"></i></div> -->
+    <!-- Import the GSAP Platform -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
 
 </div>
 
