add about text content

--- a/about.html
+++ b/about.html
@@ -46,13 +46,13 @@
     <main class="main main-animation">
         <h1 class="main__header" id="stage">ABOUT ME</h1>
         <p class="main__content">A creative and passionate web development student with a backgorund in the music & media industry. A good cup of coffee is always appreciated! Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque cumque tempore et nemo voluptatem pariatur quam eaque cum! Facere similique ex recusandae nostrum eveniet sequi ipsam temporibus, veniam quasi qui asperiores, autem debitis laboriosam incidunt. Distinctio repudiandae maxime at ea obcaecati laborum veniam numquam, nobis nisi quibusdam hic possimus aut?</p>
-        <h2 class="main__underheader">Projects:</h2>
+        <h2 class="main__underheader">Projects</h2>
         <div class="main__projects-container">
-            <div class="main__projects-item-1"> <a class="main__projects-item-img" href="https://kevin-spring.github.io/Crooked_Trees/" target="_newblank">Crooked Trees</a></div>
-            <div class="main__projects-item-2"> <a class="main__projects-item-img" href="https://kevin-spring.github.io/Crooked_Trees/" target="_newblank">Leopard</a></div>
-            <div class="main__projects-item-3"> <a class="main__projects-item-img" href="https://kevin-spring.github.io/Crooked_Trees/" target="_newblank">Calculator</a></div>
+            <div class="main__projects-item-1 bounce"> <a class="main__projects-item-img" href="https://kevin-spring.github.io/Crooked_Trees/" target="_newblank">Crooked Trees</a></div>
+            <div class="main__projects-item-2 bounce"> <a class="main__projects-item-img-leopard" href="https://kevin-spring.github.io/Crooked_Trees/" target="_newblank">Leopard</a></div>
+            <div class="main__projects-item-3 bounce"> <a class="main__projects-item-img" href="https://kevin-spring.github.io/Crooked_Trees/" target="_newblank">Calculator</a></div>
         </div>
-        <h2 class="main__underheader-music">Music:</h2>
+        <h2 class="main__underheader">Music</h2>
         <div class="main__spotify-container">
             <iframe src="https://open.spotify.com/embed/track/2ICYTIxcI1HCx1iFnTrqxM" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media" class="spotify"></iframe>
             <iframe src="https://open.spotify.com/embed/track/62WhbIKZDBSxqDBBcGFWqy" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media" class="spotify"></iframe>
