fix about content

--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
             </div>
         </header>
 
-    <section class="section__contact" id="contact">
+    <section class="section__contact main-animation" id="contact">
 
         <h2 class="contact__header">get in touch!</h2>
        
