fix further breakpoints

--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
 
         <h2 class="contact__header">get in touch!</h2>
        
-        <form action="mailto:kevinspring93@hotmail.com" method="post" enctype="text/plain">
+        <form action="mailto:kevinspring93@hotmail.com" enctype="text/plain" method="post" target="_blank">
             <div class="form__container">
                 <div class="form__group field">
                     <input type="text" class="form__field" placeholder="Name" name="name" id='name' required />
