new about-page design

--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,16 @@
                 </div>
             </div>
         </form>
+        
     </section>
+
+    <div class="socials-contact">
+        <a href="https://www.linkedin.com/in/kevin-spring/" target="_newblank" class="social-link stagger-animation"><i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/Kevin-Spring" target="_newblank" class="social-link stagger-animation"><i class="fab fa-github"></i></a>
+        <a href="https://www.instagram.com/kevininthespring/" target="_newblank" class="social-link stagger-animation"><i class="fab fa-instagram"></i></a>
+    </div>
+
+    
 
     <!-- Import scripts for the blob -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/p5.min.js"></script>
