--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,68 +15,116 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="assets/js/script.js" defer></script>
 </head>
+
 <body>
 
     <header class="navbar__links" id="stage">
         <div class="navbar__links__item-wrapper">
-            <h3 class="navbar__links-item stagger-animation"> <a href="index.html" class="iglo"><i class="fas fa-igloo"></i></a> </h3>
+            <h3 class="navbar__links-item stagger-animation"> <a href="index.html" class="iglo"><i
+                        class="fas fa-igloo"></i></a> </h3>
             <h3 class="navbar__links-item stagger-animation"> <a href="about.html" class="effect-box">About</a> </h3>
-            <h3 class="navbar__links-item stagger-animation"> <a href="contact.html" class="effect-box">Contact</a> </h3>
+            <h3 class="navbar__links-item stagger-animation"> <a href="contact.html" class="effect-box">Contact</a>
+            </h3>
             <h3 class="navbar__links-item stagger-animation"> <a href="cv.html" class="effect-box">cv</a> </h3>
         </div>
     </header>
 
     <div class="about__wrapper">
 
-     <!-- 3D text animation -->
-     <header class="threeD">
-        <div class="wrap">
-            <div class="text"><i class="fas fa-robot"></i></div>
-            <div class="text"><i class="fas fa-robot"></i></div>
-            <div class="text"><i class="fas fa-robot"></i></div>
-            <div class="text"><i class="fas fa-robot"></i></div>
-            <div class="text"><i class="fas fa-robot"></i></div>
-            <div class="text"><i class="fas fa-robot"></i></div>
-            <div class="text"><i class="fas fa-robot"></i></div>
-            <div class="text"><i class="fas fa-robot"></i></div>
-            <div class="text"><i class="fas fa-robot"></i></div>
-            <div class="text"><i class="fas fa-robot"></i></div>
-        </div>
-    </header>
+        <!-- 3D text animation -->
+        <header class="threeD">
+            <div class="wrap">
+                <div class="text"><i class="fas fa-robot"></i></div>
+                <div class="text"><i class="fas fa-robot"></i></div>
+                <div class="text"><i class="fas fa-robot"></i></div>
+                <div class="text"><i class="fas fa-robot"></i></div>
+                <div class="text"><i class="fas fa-robot"></i></div>
+                <div class="text"><i class="fas fa-robot"></i></div>
+                <div class="text"><i class="fas fa-robot"></i></div>
+                <div class="text"><i class="fas fa-robot"></i></div>
+                <div class="text"><i class="fas fa-robot"></i></div>
+                <div class="text"><i class="fas fa-robot"></i></div>
+            </div>
+        </header>
 
-    <main class="main main-animation">
-        <h1 class="main__header" id="stage">ABOUT ME</h1>
-        <p class="main__content">A creative and passionate web development student with a backgorund in the music & media industry. A good cup of coffee is always appreciated! Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque cumque tempore et nemo voluptatem pariatur quam eaque cum! Facere similique ex recusandae nostrum eveniet sequi ipsam temporibus, veniam quasi qui asperiores, autem debitis laboriosam incidunt. Distinctio repudiandae maxime at ea obcaecati laborum veniam numquam, nobis nisi quibusdam hic possimus aut?</p>
-        <h2 class="main__underheader">Projects</h2>
-        <div class="main__projects-container">
-            <div class="main__projects-item-1 bounce"> <a class="main__projects-item-img" href="https://kevin-spring.github.io/Crooked_Trees/" target="_newblank">Crooked Trees</a></div>
-            <div class="main__projects-item-2 bounce"> <a class="main__projects-item-img-leopard" href="https://kevin-spring.github.io/Crooked_Trees/" target="_newblank">Leopard</a></div>
-            <div class="main__projects-item-3 bounce"> <a class="main__projects-item-img" href="https://kevin-spring.github.io/Crooked_Trees/" target="_newblank">Calculator</a></div>
+        <div class="border-wrapper">
+            <div class="border"> </div>
+            <div class="border"></div>
+            <div class="border"></div>
+            <div class="border"></div>
+            <div class="border"></div>
+            <div class="border"></div>
+            <div class="border"></div>
+            <div class="border"></div>
+            <div class="border"></div>
+            <div class="border"></div>
         </div>
-        <h2 class="main__underheader">Music</h2>
-        <div class="main__spotify-container">
-            <iframe src="https://open.spotify.com/embed/track/2ICYTIxcI1HCx1iFnTrqxM" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media" class="spotify"></iframe>
-            <iframe src="https://open.spotify.com/embed/track/62WhbIKZDBSxqDBBcGFWqy" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media" class="spotify"></iframe>
-            <iframe src="https://open.spotify.com/embed/track/72CTSMA60kJFv20SoHHq6Q" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media" class="spotify"></iframe>
-        </div>
-        <div class="about__socials">
-            <a href="https://www.linkedin.com/in/kevin-spring/" target="_newblank" class="about__social-link"><i class="fab fa-linkedin"></i></a>
-            <a href="https://github.com/Kevin-Spring" target="_newblank" class="about__social-link"><i class="fab fa-github"></i></a>
-            <a href="https://www.instagram.com/kevininthespring/" target="_newblank" class="about__social-link"><i class="fab fa-instagram"></i></a>
-        </div>
-    </main>
 
-    
 
-    <!-- <div class=""><i class="far fa-hand-spock hand"></i></div> -->
-    <!-- Import the GSAP Platform -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
+        <main class="main main-animation">
+            <div class="main__header-wrapper">
+                <h1 class="main__header" id="stage">ABOUT ME</h1>
+                <h1 class="main__header" id="stage">ABOUT ME</h1>
+                <h1 class="main__header" id="stage">ABOUT ME</h1>
+                <h1 class="main__header" id="stage">ABOUT ME</h1>
+                <h1 class="main__header" id="stage">ABOUT ME</h1>
+                <h1 class="main__header" id="stage">ABOUT ME</h1>
+                <h1 class="main__header" id="stage">ABOUT ME</h1>
+                <h1 class="main__header" id="stage">ABOUT ME</h1>
+                <h1 class="main__header" id="stage">ABOUT ME</h1>
+                <h1 class="main__header" id="stage">ABOUT ME</h1>
+            </div>
 
-</div>
+            <p class="main__content">A creative and passionate web development student with a backgorund in the music &
+                media industry. A good cup of coffee is always appreciated! Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Itaque cumque tempore et nemo voluptatem pariatur quam eaque cum! Facere similique ex
+                recusandae nostrum eveniet sequi ipsam temporibus, veniam quasi qui asperiores, autem debitis laboriosam
+                incidunt. Distinctio repudiandae maxime at ea obcaecati laborum veniam numquam, nobis nisi quibusdam hic
+                possimus aut?</p>
+                <hr>
+                <br>
+            <h2 class="main__underheader">PROJECTS</h2>
+            <div class="main__projects-container">
+                <div class="main__projects-item-1 bounce"> <a class="main__projects-item-img"
+                        href="https://kevin-spring.github.io/Crooked_Trees/" target="_newblank">Crooked Trees</a></div>
+                <div class="main__projects-item-2 bounce"> <a class="main__projects-item-img-leopard"
+                        href="https://kevin-spring.github.io/Crooked_Trees/" target="_newblank">Leopard</a></div>
+                <div class="main__projects-item-3 bounce"> <a class="main__projects-item-img"
+                        href="https://kevin-spring.github.io/Crooked_Trees/" target="_newblank">Calculator</a></div>
+            </div>
+            <hr>
+            <h2 class="main__underheader">MUSIC</h2>
+            <div class="main__spotify-container">
+                <iframe src="https://open.spotify.com/embed/track/2ICYTIxcI1HCx1iFnTrqxM" width="300" height="380"
+                    frameborder="0" allowtransparency="true" allow="encrypted-media" class="spotify"></iframe>
+                <iframe src="https://open.spotify.com/embed/track/62WhbIKZDBSxqDBBcGFWqy" width="300" height="380"
+                    frameborder="0" allowtransparency="true" allow="encrypted-media" class="spotify"></iframe>
+                <iframe src="https://open.spotify.com/embed/track/72CTSMA60kJFv20SoHHq6Q" width="300" height="380"
+                    frameborder="0" allowtransparency="true" allow="encrypted-media" class="spotify"></iframe>
+            </div>
+            <div class="about__socials">
+                <a href="https://www.linkedin.com/in/kevin-spring/" target="_newblank" class="about__social-link"><i
+                        class="fab fa-linkedin"></i></a>
+                <a href="https://github.com/Kevin-Spring" target="_newblank" class="about__social-link"><i
+                        class="fab fa-github"></i></a>
+                <a href="https://www.instagram.com/kevininthespring/" target="_newblank" class="about__social-link"><i
+                        class="fab fa-instagram"></i></a>
+            </div>
+        </main>
+
+
+
+        <!-- <div class=""><i class="far fa-hand-spock hand"></i></div> -->
+        <!-- Import the GSAP Platform -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"></script>
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
+
+    </div>
 
 </body>
+
 </html>
