responsive on mobile

--- a/about.html
+++ b/about.html
@@ -76,11 +76,7 @@
             </div>
 
             <p class="main__content">A creative and passionate web development student with a backgorund in the music &
-                media industry. A good cup of coffee is always appreciated! Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Itaque cumque tempore et nemo voluptatem pariatur quam eaque cum! Facere similique ex
-                recusandae nostrum eveniet sequi ipsam temporibus, veniam quasi qui asperiores, autem debitis laboriosam
-                incidunt. Distinctio repudiandae maxime at ea obcaecati laborum veniam numquam, nobis nisi quibusdam hic
-                possimus aut?</p>
+                media industry. A good cup of coffee is always appreciated! </p>
                 <hr>
                 <br>
             <h2 class="main__underheader">PROJECTS</h2>
