--- a/contact.html
+++ b/contact.html
@@ -55,9 +55,9 @@
     </section>
 
     <div class="socials-contact">
-        <a href="https://www.linkedin.com/in/kevin-spring/" target="_newblank" class="social-link stagger-animation"><i class="fab fa-linkedin"></i></a>
-        <a href="https://github.com/Kevin-Spring" target="_newblank" class="social-link stagger-animation"><i class="fab fa-github"></i></a>
-        <a href="https://www.instagram.com/kevininthespring/" target="_newblank" class="social-link stagger-animation"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/kevin-spring/" target="_newblank" class="social-link-contact stagger-animation"><i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/Kevin-Spring" target="_newblank" class="social-link-contact stagger-animation"><i class="fab fa-github"></i></a>
+        <a href="https://www.instagram.com/kevininthespring/" target="_newblank" class="social-link-contact stagger-animation"><i class="fab fa-instagram"></i></a>
     </div>
 
     
