fix further responsiveness

--- a/about.html
+++ b/about.html
@@ -81,11 +81,11 @@
                 <br>
             <h2 class="main__underheader">PROJECTS</h2>
             <div class="main__projects-container">
-                <div class="main__projects-item-1 bounce"> <a class="main__projects-item-img"
+                <div class="main__projects-item bounce"> <a class="main__projects-item-img"
                         href="https://kevin-spring.github.io/Crooked_Trees/" target="_newblank">Crooked Trees</a></div>
-                <div class="main__projects-item-2 bounce"> <a class="main__projects-item-img-leopard"
+                <div class="main__projects-item bounce"> <a class="main__projects-item-img"
                         href="https://kevin-spring.github.io/Crooked_Trees/" target="_newblank">Leopard</a></div>
-                <div class="main__projects-item-3 bounce"> <a class="main__projects-item-img"
+                <div class="main__projects-item bounce"> <a class="main__projects-item-img"
                         href="https://kevin-spring.github.io/Crooked_Trees/" target="_newblank">Calculator</a></div>
             </div>
             <hr>
