--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
                 <div class="main__projects-item bounce"> <a class="main__projects-item-img"
                         href="https://kevin-spring.github.io/Crooked_Trees/" target="_newblank">Leopard</a></div>
                 <div class="main__projects-item bounce"> <a class="main__projects-item-img"
-                        href="https://kevin-spring.github.io/Crooked_Trees/" target="_newblank">Calculator</a></div>
+                        href="https://kevin-spring.github.io/Crooked_Trees/" target="_newblank">Sandberg</a></div>
             </div>
             <hr>
             <h2 class="main__underheader">MUSIC</h2>
