--- a/about.html
+++ b/about.html
@@ -81,12 +81,12 @@
                 <br>
             <h2 class="main__underheader">PROJECTS</h2>
             <div class="main__projects-container">
-                <div class="main__projects-item bounce"> <a class="main__projects-item-img"
+                <div class="main__projects-item bounce sandberg"> <a class="main__projects-item-img"
+                        href="http://andreassandberg.com" target="_newblank">Sandberg</a></div>
+                <div class="main__projects-item bounce crooked"> <a class="main__projects-item-img"
                         href="https://kevin-spring.github.io/Crooked_Trees/" target="_newblank">Crooked Trees</a></div>
-                <div class="main__projects-item bounce"> <a class="main__projects-item-img"
-                        href="https://kevin-spring.github.io/Crooked_Trees/" target="_newblank">Leopard</a></div>
-                <div class="main__projects-item bounce"> <a class="main__projects-item-img"
-                        href="https://kevin-spring.github.io/Crooked_Trees/" target="_newblank">Sandberg</a></div>
+                <div class="main__projects-item bounce leopard"> <a class="main__projects-item-img"
+                        href="https://kevin-spring.github.io/the_generation_intership_test/" target="_newblank">Leopard</a></div>
             </div>
             <hr>
             <h2 class="main__underheader">MUSIC</h2>
