thumbnail for every page

--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="assets/img/site_preview.jpg">
     <title>Springdesign | Contact</title>
     <!-- Copyright (c) 2020 by Louis Hoebregts (https://codepen.io/Mamboleoo/pen/QWbmPGZ) -->
     <script src="assets/js/blob.js" defer></script>
