--- a/about.html
+++ b/about.html
@@ -48,21 +48,27 @@
             </div>
         </header>
 
-        <div class="border-wrapper">
-            <div class="border"> </div>
-            <div class="border"></div>
-            <div class="border"></div>
-            <div class="border"></div>
-            <div class="border"></div>
-            <div class="border"></div>
-            <div class="border"></div>
-            <div class="border"></div>
-            <div class="border"></div>
-            <div class="border"></div>
-        </div>
+        <!-- For 3D Effect on border uncomment theese -->
 
+        <!-- <div class="border-wrapper">
+            <div class="border"></div>
+            <div class="border"></div>
+            <div class="border"></div>
+            <div class="border"></div>
+            <div class="border"></div>
+            <div class="border"></div>
+            <div class="border"></div>
+            <div class="border"></div>
+            <div class="border"></div>
+            <div class="border"></div> 
+        </div> -->
+
+       
 
         <main class="main main-animation">
+
+            <hr>
+
             <div class="main__header-wrapper">
                 <h1 class="main__header" id="stage">ABOUT ME</h1>
                 <h1 class="main__header" id="stage">ABOUT ME</h1>
@@ -78,8 +84,7 @@
 
             <p class="main__content">A creative and passionate web development student with a backgorund in the music &
                 media industry. A good cup of coffee is always appreciated! </p>
-                <hr>
-                <br>
+            <hr>
             <h2 class="main__underheader">PROJECTS</h2>
             <div class="main__projects-container">
                 <div class="main__projects-item bounce sandberg"> <a class="main__projects-item-img"
@@ -87,14 +92,31 @@
                 <div class="main__projects-item bounce crooked"> <a class="main__projects-item-img"
                         href="https://kevin-spring.github.io/Crooked_Trees/" target="_newblank">Crooked Trees</a></div>
                 <div class="main__projects-item bounce leopard"> <a class="main__projects-item-img"
-                        href="https://kevin-spring.github.io/the_generation_intership_test/" target="_newblank">Leopard</a></div>
+                        href="https://kevin-spring.github.io/the_generation_intership_test/"
+                        target="_newblank">Leopard</a></div>
+                <div class="main__projects-item bounce"> <a class="main__projects-item-img"
+                        href="https://github.com/Kevin-Spring/Studio_React_App" target="_newblank">React // School
+                        Project </a></div>
+
+                <div class="main__projects-item bounce"> <a class="main__projects-item-img"
+                        href="https://github.com/Kevin-Spring/Vanilla-JS-Calculator" target="_newblank">Calculator // 
+                        School Project</a></div>
+
+                <div class="main__projects-item bounce"> <a class="main__projects-item-img"
+                        href="https://github.com/Kevin-Spring/API_Individuellt_PHP" target="_newblank">API Tester //
+                        School Project</a></div>
             </div>
+
+
+
+
+
             <hr>
             <h2 class="main__underheader">MUSIC</h2>
             <div class="main__spotify-container">
                 <iframe src="https://open.spotify.com/embed/track/2ICYTIxcI1HCx1iFnTrqxM" width="300" height="380"
                     frameborder="0" allowtransparency="true" allow="encrypted-media" class="spotify"></iframe>
-                <iframe src="https://open.spotify.com/embed/track/62WhbIKZDBSxqDBBcGFWqy" width="300" height="380"
+                <iframe src="https://open.spotify.com/embed/track/6UVViazMzpzF9nfXsBR0V7" width="300" height="380"
                     frameborder="0" allowtransparency="true" allow="encrypted-media" class="spotify"></iframe>
                 <iframe src="https://open.spotify.com/embed/track/72CTSMA60kJFv20SoHHq6Q" width="300" height="380"
                     frameborder="0" allowtransparency="true" allow="encrypted-media" class="spotify"></iframe>
@@ -107,7 +129,12 @@
                 <a href="https://www.instagram.com/kevininthespring/" target="_newblank" class="about__social-link"><i
                         class="fab fa-instagram"></i></a>
             </div>
+
+            <hr>
+
         </main>
+
+       
 
 
 
