--- a/contact.html
+++ b/contact.html
@@ -55,10 +55,11 @@
         
     </section>
 
+    <!-- Add class: stagger-animation, to get the animation -->
     <div class="socials-contact">
-        <a href="https://www.linkedin.com/in/kevin-spring/" target="_newblank" class="social-link-contact stagger-animation"><i class="fab fa-linkedin"></i></a>
-        <a href="https://github.com/Kevin-Spring" target="_newblank" class="social-link-contact stagger-animation"><i class="fab fa-github"></i></a>
-        <a href="https://www.instagram.com/kevininthespring/" target="_newblank" class="social-link-contact stagger-animation"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/kevin-spring/" target="_newblank" class="social-link-contact"><i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/Kevin-Spring" target="_newblank" class="social-link-contact"><i class="fab fa-github"></i></a>
+        <a href="https://www.instagram.com/kevininthespring/" target="_newblank" class="social-link-contact"><i class="fab fa-instagram"></i></a>
     </div>
 
     
