added more music

--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
             <div class="border"></div> 
         </div> -->
 
-       
+
 
         <main class="main main-animation">
 
@@ -99,7 +99,7 @@
                         Project </a></div>
 
                 <div class="main__projects-item bounce"> <a class="main__projects-item-img"
-                        href="https://github.com/Kevin-Spring/Vanilla-JS-Calculator" target="_newblank">Calculator // 
+                        href="https://github.com/Kevin-Spring/Vanilla-JS-Calculator" target="_newblank">Calculator //
                         School Project</a></div>
 
                 <div class="main__projects-item bounce"> <a class="main__projects-item-img"
@@ -120,7 +120,15 @@
                     frameborder="0" allowtransparency="true" allow="encrypted-media" class="spotify"></iframe>
                 <iframe src="https://open.spotify.com/embed/track/72CTSMA60kJFv20SoHHq6Q" width="300" height="380"
                     frameborder="0" allowtransparency="true" allow="encrypted-media" class="spotify"></iframe>
+                <iframe src="https://open.spotify.com/embed/track/2xI5D6m0ob8ubT3gU53WuQ" width="300" height="380"
+                    frameborder="0" allowtransparency="true" allow="encrypted-media" class="spotify"></iframe>
+                <iframe src="https://open.spotify.com/embed/track/7Ew9EjIfCo5tQcvNecHLq7" width="300" height="380"
+                    frameborder="0" allowtransparency="true" allow="encrypted-media" class="spotify"></iframe>
+                <iframe src="https://open.spotify.com/embed/track/0klGosY6h4531iJ4qUKI5U" width="300" height="380"
+                    frameborder="0" allowtransparency="true" allow="encrypted-media" class="spotify"></iframe>
             </div>
+
+            <!-- Socials -->
             <div class="about__socials">
                 <a href="https://www.linkedin.com/in/kevin-spring/" target="_newblank" class="about__social-link"><i
                         class="fab fa-linkedin"></i></a>
@@ -134,7 +142,7 @@
 
         </main>
 
-       
+
 
 
 
