a simple makeover to the site

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:image" content="assets/img/site_preview.jpg">
-    <title>Springdesign | Home</title>
+    <title>Spring | Home</title>
     <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@500;700&display=swap" rel="stylesheet">
     <!-- Font Awesome -->
@@ -30,9 +30,11 @@
 
     <header class="navbar__links">
         <div class="navbar__links__item-wrapper">
-            <h3 class="navbar__links-item stagger-animation"> <a href="about.html" class="effect-box">About</a> </h3>
-            <h3 class="navbar__links-item stagger-animation"> <a href="contact.html" class="effect-box">Contact</a> </h3>
-            <h3 class="navbar__links-item stagger-animation"> <a href="cv.html" class="effect-box">cv</a> </h3>
+            <h3 class="navbar__links-item stagger-animation"> <a href="projects.html" class="effect-box"><i class="fas fa-folder-open"></i></a> </h3>
+            <h3 class="navbar__links-item stagger-animation"> <a href="robot.html" class="effect-box"><i class="fas fa-robot"></i></a> </h3>
+            <!-- <h3 class="navbar__links-item stagger-animation"> <a href="about.html" class="effect-box">About</a> </h3> -->
+            <!-- <h3 class="navbar__links-item stagger-animation"> <a href="contact.html" class="effect-box">Contact</a> </h3> -->
+            <!-- <h3 class="navbar__links-item stagger-animation"> <a href="cv.html" class="effect-box">cv</a> </h3> --> 
         </div>
     </header>
 
@@ -41,6 +43,8 @@
     </section> -->
       
         <div class="socials">
+            <a href="mailto:spriiing@hotmail.se" target="_newblank" class="social-link stagger-animation"><i class="fas fa-envelope"></i></a>
+            <a href="tel:0046707974475" target="_newblank" class="social-link stagger-animation"><i class="fas fa-phone"></i></a>
             <a href="https://www.linkedin.com/in/kevin-spring/" target="_newblank" class="social-link stagger-animation"><i class="fab fa-linkedin"></i></a>
             <a href="https://github.com/Kevin-Spring" target="_newblank" class="social-link stagger-animation"><i class="fab fa-github"></i></a>
             <a href="https://www.instagram.com/kevininthespring/" target="_newblank" class="social-link stagger-animation"><i class="fab fa-instagram"></i></a>
