--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <h2 class="header__video__titel"> <span class="header">Kevin </span><span class="header"> Spring</span></h2>
     </section> -->
       
-        <div class="socials">
+        <div class="socials landing">
             <a href="mailto:spriiing@hotmail.se" target="_newblank" class="social-link stagger-animation"><i class="fas fa-envelope"></i></a>
             <a href="tel:0046707974475" target="_newblank" class="social-link stagger-animation"><i class="fas fa-phone"></i></a>
             <a href="https://www.linkedin.com/in/kevin-spring/" target="_newblank" class="social-link stagger-animation"><i class="fab fa-linkedin"></i></a>
