--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="assets/img/site_preview.jpg">
+    <meta property="og:image" content="assets/img/site_preview_format.jpg">
     <title>Spring | Home</title>
     <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@500;700&display=swap" rel="stylesheet">
